# ghosthunter

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude.md  LICENSE  LICENSE_HISTORY.md  NOTICE  PRIOR_ART.md  README.md  SECURITY.md  TRADEMARK.md  pyproject.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  scorecard.yml
benchmarks/: README.md  generate_fixtures.py  run_benchmark.py  scenarios.py
benchmarks/real_world/: ATTRIBUTION.md  README.md
benchmarks/results/: latest.md
benchmarks/spikes/: aws_01_nat_gateway_runaway.csv  aws_01_nat_gateway_runaway.json  aws_02_s3_lifecycle_miss.csv  aws_02_s3_lifecycle_miss.json  aws_03_cloudwatch_logs_verbose.csv  aws_03_cloudwatch_logs_verbose.json  aws_04_data_transfer_cross_az.csv  aws_04_data_transfer_cross_az.json  aws_05_bedrock_runaway.csv  aws_05_bedrock_runaway.json  gcp_01_bigquery_slot_runaway.csv  gcp_01_bigquery_slot_runaway.json  gcp_02_nat_egress_compromised.csv  gcp_02_nat_egress_compromised.json  gcp_03_cloudrun_min_instances.csv  gcp_03_cloudrun_min_instances.json  gcp_04_logging_debug_leak.csv  gcp_04_logging_debug_leak.json  gcp_05_gke_autoscaler_flapping.csv  gcp_05_gke_autoscaler_flapping.json
docs/: installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/concepts/: dual-model.mdx  focus.mdx  severity.mdx  validator.mdx
docs/legal/: disclaimer.mdx  license.mdx  trademark.mdx
docs/modes/: active.mdx  audit.mdx  demo.mdx  paranoid.mdx
docs/providers/: aws.mdx  gcp.mdx
sample_data/: billing.json  demo_script.json
sandbox/: README.md  SCRIPTED_OUTPUTS.md  aws-sandbox-billing.csv
scripts/: install-git-hooks.sh
src/ghosthunter/: chat.py  chat_io.py  cli.py  clipboard.py  config.py  demo.py  evidence.py  hypothesis.py  investigator.py  preflight.py  ui.py
src/ghosthunter/memory/: __init__.py  palace.py
src/ghosthunter/models/: _api_retry.py  executor.py  reasoner.py
src/ghosthunter/providers/: advisor.py  aws.py  base.py  billing_file.py  gcp.py
src/ghosthunter/security/: allowlist.py  allowlist_aws.py  allowlist_gcp.py  blocklist.py  pipes.py  prompt_sanitizer.py  secrets_redactor.py  validator.py
tests/: test_advisor.py  test_api_retry.py  test_aws_billing_file.py  test_aws_provider.py  test_benchmark_smoke.py  test_charge_description.py  test_claude_md_size.py  test_cli_renderer.py  test_cli_smoke.py  test_clipboard_and_v1_0_6.py  test_compression_envelope.py  test_config_migration.py  test_demo_aws.py  test_executor_prompt.py  test_focus_billing.py  test_focus_sandbox.py  test_gcp_provider.py  test_investigator.py  test_memory_palace.py  test_paste_safety_v1_0_4.py  test_preflight.py  test_prompt_sanitizer.py  test_provider_registry.py  test_provider_sniff_focus.py  test_reasoner_prompt.py  test_reasoner_shape_coercion.py  test_remediation_render_v1_0_5.py  test_secrets_redactor.py  test_security.py  test_security_aws.py  test_security_aws_full.py
tests/fixtures/aws/: ce_by_service.csv  ce_get_cost_and_usage.json  cur_line_items.csv  focus_sample_small.csv
