[tool.poetry]
name = "ghosthunter"
version = "1.0.0"
description = "Investigates why cloud costs spiked, using Claude Opus + Sonnet."
authors = ["Ghosthunter"]
readme = "README.md"
packages = [{include = "ghosthunter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.40.0"
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.7.0"
# GCP is the default active-mode provider. Optional in practice — advisor
# mode (the default) doesn't import google-cloud-* so installs without
# them work for paranoid-mode users.
google-cloud-bigquery = {version = "^3.25.0", optional = true}
google-cloud-logging = {version = "^3.10.0", optional = true}
# AWS active mode needs boto3. Advisor mode with CE CSVs does NOT —
# that's why boto3 is an extra, not a hard dependency.
boto3 = {version = "^1.34.0", optional = true}
pydantic = "^2.7.0"
tomli = "^2.0.0"
tomli-w = "^1.0.0"

[tool.poetry.extras]
# `pip install ghosthunter[gcp]` pulls in GCP active-mode deps.
gcp = ["google-cloud-bigquery", "google-cloud-logging"]
# `pip install ghosthunter[aws]` pulls in boto3 for AWS active mode.
aws = ["boto3"]
# `pip install ghosthunter[all]` — both providers' active modes.
all = ["google-cloud-bigquery", "google-cloud-logging", "boto3"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"

[tool.poetry.scripts]
ghosthunter = "ghosthunter.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
