[tool.poetry]
name = "ghosthunter"
version = "1.0.0"
description = "Investigate WHY your cloud costs spiked — dual-model (Claude Opus + Sonnet) root-cause analysis for GCP and AWS."
authors = ["matrixgard-Ghosthunter"]
maintainers = ["matrixgard-Ghosthunter"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/matrixgard/ghosthunter"
repository = "https://github.com/matrixgard/ghosthunter"
documentation = "https://github.com/matrixgard/ghosthunter#readme"
keywords = [
    "finops",
    "cloud-cost",
    "cost-optimization",
    "root-cause-analysis",
    "gcp",
    "aws",
    "anthropic",
    "claude",
    "llm",
    "devops",
    "sre",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]
packages = [{include = "ghosthunter", from = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/matrixgard/ghosthunter/issues"
"Changelog" = "https://github.com/matrixgard/ghosthunter/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/matrixgard/ghosthunter/blob/main/SECURITY.md"

[tool.poetry.dependencies]
python = "^3.12"
# Lower bounds reflect what the code was developed against; upper bounds
# left open so editable installs don't downgrade newer versions already
# in the venv. Typer <0.15 + Click >=8.3 is a broken pairing (Click 8.3
# dropped the positional `ctx` arg from Parameter.make_metavar which
# Typer 0.12 still assumed) — pin typer >=0.15 to pick up the fix.
anthropic = ">=0.40.0"
typer = {extras = ["all"], version = ">=0.15.0"}
rich = ">=13.7.0"
# GCP is the default active-mode provider. Optional in practice — advisor
# mode (the default) doesn't import google-cloud-* so installs without
# them work for paranoid-mode users.
google-cloud-bigquery = {version = "^3.25.0", optional = true}
google-cloud-logging = {version = "^3.10.0", optional = true}
# AWS active mode needs boto3. Advisor mode with CE CSVs does NOT —
# that's why boto3 is an extra, not a hard dependency.
boto3 = {version = "^1.34.0", optional = true}
pydantic = "^2.7.0"
tomli = "^2.0.0"
tomli-w = "^1.0.0"

[tool.poetry.extras]
# `pip install ghosthunter[gcp]` pulls in GCP active-mode deps.
gcp = ["google-cloud-bigquery", "google-cloud-logging"]
# `pip install ghosthunter[aws]` pulls in boto3 for AWS active mode.
aws = ["boto3"]
# `pip install ghosthunter[all]` — both providers' active modes.
all = ["google-cloud-bigquery", "google-cloud-logging", "boto3"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"

[tool.poetry.scripts]
ghosthunter = "ghosthunter.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
